# poc_rag_gcp_public

./: .env.local.example  .firebaserc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCUMENT-MAP.md  README.md  app.py  firebase.json  firestore.indexes.json  main.py  mkdocs.yml  pyproject.toml  requirements.txt
doc/: README.md  da-method.md
doc/DD/: DD-001_リサーチドキュメント整備.md  DD-002_アーキテクチャ図追加.md  DD-003_ファクトチェック技術検証.md  DD-004_実装ガイド化.md  DD-005_意思決定記録.md  DD-006_横断トピック整理.md  DD-007_評価用テストデータ整備.md  DD-008_開発テスト評価自動化基盤.md  DD-009-2_データブラウザUI.md  DD-009-3_TypeScript_UI移行.md  DD-009-4_管理者向けUI.md  DD-009-5_クエリログ蓄積・分析基盤.md  DD-010-2_RAG精度改善の説明資料作成.md  DD-012-2_ドキュメント品質改善.md  DD-012_プロジェクトドキュメント整備.md  DD-013-2_アブレーションスタディ再実行.md  DD-013-3_評価実行の進捗表示.md  DD-013_テスト評価基盤の品質改善.md  DD-014-2_プレゼン資料の評価データ更新.md  DD-014_テストデータ充実化.md  DD-015_チューニングUI改善.md  DD-016_評価基盤Firebase完全対応.md  DD-019-10_権限不足の明示的拒否.md  DD-019-11_Multi-Query_Expansion.md  DD-019-12_Answerability_Gate.md  DD-019-13_曖昧判定の安定化.md  DD-019-14_残失敗ケース分析と90%達成施策.md  DD-019-1_メタデータスコアリング.md  DD-019-3-2_Tuning画面の実行状態表示.md  DD-019-3-3_別セッション実行タスクのadmin画面表示.md  DD-019-3_文脈説明の自動付与.md  DD-019-4_ハイブリッド検索.md  DD-019-5_権限フィルタリング.md  DD-019-6_インテントルーティング.md  DD-019-7_AIフィルタ自動生成.md  DD-019-8-2_キーワード検索の分割バグ修正.md  DD-019-8_semanticテスト失敗の原因分析.md  DD-019-9-2_コレクション切替による並列チャンク実験.md  DD-019-9_チャンクサイズ調整実験.md  DD-019_RAG精度改善技術の段階的実装.md  (+11 more)
doc/guide/: chunk-experiment.md  cost-report.md  local-operations.md  vertex-ai-search-setup.md
doc/record/: rag_improvement_history.md
scripts/: README.md  deploy.sh  dev-kill.sh  dev.sh  evaluate.py  evaluate_parallel.py  fetch_wikipedia.py  ingest.py  run_chunk_experiments.py  run_experiment.py  verify_dd_019_8.py  verify_dd_test_ids.py
src/: README.md  config.py  task_status.py
test-data/: README.md
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+237 files in other folders)
