[project]
name = "poc-rag-gcp-public"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.7.6",
    "pymdown-extensions>=10.21",
    "google-cloud-firestore>=2.25.0",
    "vertexai>=1.0.0",
    "google-cloud-discoveryengine>=0.13.0",
    "langchain-text-splitters>=0.3.0",
    "python-dotenv>=1.1.0",
    "firebase-functions>=0.4.0",
    "functions-framework>=3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes（未使用変数・import等）
    "I",    # isort（import順序）
    "UP",   # pyupgrade（古い構文の検出）
    "B",    # flake8-bugbear（バグになりやすいパターン）
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
